--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
-    <title>Phantom8015</title>
+    <title>WaterCycle</title>
     <link rel="icon" href="static/pfp.png" />
     <meta http-equiv="CACHE-CONTROL" content="NO-CACHE" />
     <link rel="stylesheet" href="static/style.css" />
@@ -38,7 +38,7 @@
         </div>
         <div class="title">
           <img src="static/folder.png" alt="Icon" class="title-icon" />
-          <span id="title">Phantom8015 — -zsh — </span>
+          <span id="title">WaterCycle — -zsh — </span>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
           <div class="command-line"></div>
         </div>
         <div class="command-line">
-          <span class="prompt">(base) Phantom8015@MacBook-Air ~ %&nbsp;</span>
+          <span class="prompt">(base) WaterCycle@MacBook-Air ~ %&nbsp;</span>
           <input type="text" id="command-input" autocomplete="off" autofocus/>
         </div>
       </div>
